--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@reduxjs/toolkit": "^1.7.2",
+    "@types/react-redux": "^7.1.22",
     "cookies-next": "^2.0.4",
     "next": "^12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
